# llm_training

./: .gitignore  README.md  pyproject.toml
modules/1-Review_Classification/: review_analysis.ipynb
modules/1-Review_Classification/data/: complex_reviews.json  extra_data.txt  simple_reviews.json
modules/2-Tracing/: mlflow_setup.py  review_script.py
modules/3-MCP/: Readme.md  chatbot.py  mcp_reservation.py  mcp_schedule.py
modules/3-MCP/data/: cinema_schedule_4days.csv  reservations.json
modules/4-Optimisation/: optimisation.ipynb
