[project]
name = "llm-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.10",
    "mlflow>=3.4.0",
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
]
